# YFinance-Trader-MCP-ClaudeDesktop

./: README.md  license  main.py  pyproject.toml  requirements.txt  start-server.bat  start-yfinance-mcp.bat
